--- a/templates/Main/new_schema.html
+++ b/templates/Main/new_schema.html
@@ -91,6 +91,6 @@
                 </td>
             </tr>
         </table>
-        <button class="btn btn-primary" type="submit" name="action" value="add" style="margin-top: 20px;">Add column</button>
+        <button class="btn btn-primary" type="submit" name="action" value="add" style="margin-top: 20px; margin-bottom: 30px;">Add column</button>
     </form>
 {% endblock %}
