--- a/templates/Main/schemas.html
+++ b/templates/Main/schemas.html
@@ -1,12 +1,12 @@
 {% extends 'Main/base_main.html' %}
 
 {% block content %}
-    <div class="row">
+    <div class="row" style="width: 56%;">
         <div class="col">
             <h3>Data schemas</h3>
         </div>
         <div class="col">
-            <a href="/new_schema" class="btn btn-success" style="background-color: #5CB85C; border-color: #5CB85C;">New schema</a>
+            <a href="/new_schema" class="btn btn-success" style="float: right; background-color: #5CB85C; border-color: #5CB85C;">New schema</a>
         </div>
     </div>
     <table style="width: 56%; margin-top: 30px;">
