--- a/templates/Main/new_schema.html
+++ b/templates/Main/new_schema.html
@@ -2,6 +2,8 @@
 
 {% load filters %}
 
+{% block title %}Schema editor{% endblock %}
+
 {% block content %}
     <form method="POST">
         {% csrf_token %}
