--- a/templates/Main/schemas.html
+++ b/templates/Main/schemas.html
@@ -1,5 +1,7 @@
 {% extends 'Main/base_main.html' %}
 
+{% block title %}Schemas{% endblock %}
+
 {% block content %}
     <div class="row" style="width: 56%;">
         <div class="col">
