--- a/templates/enter.html
+++ b/templates/enter.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Enter{% endblock %}
+
 {% block content %}
     <div style="text-align: center; border: 1px solid gray; position: absolute; width: 40%; padding: 5%; left: 20%; right: 20%; margin-top: 5%;">
         <h1 style="font-weight: lighter; margin-top: 40px;">Login</h1>
